[build-system]
requires      = ["setuptools>=61.0", "wheel", ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chatarena*"]
exclude = ["experiments*", "tests*"]

[project]
name = "chatarena"
authors = [
    { name = "Yuxiang Wu", email = "yuxiang.cs@gmail.com" },
]
description = "Multi-Agent Language Game Environments for Large Language Models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "tenacity==8.2.2",
    "rich==13.3.3",
    "prompt_toolkit==3.0.38",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "chatarena.__version__"}

[project.urls]
"Homepage" = "https://github.com/chatarena/chatarena"
"Bug Tracker" = "https://github.com/chatarena/chatarena/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.2.8,<0.3.0"]
cohere = ["cohere>=4.3.1"]
huggingface = ["transformers>=4.27.4"]
bard = ["bardapi==0.1.11"]
langchain = ["langchain>=0.0.135"]
gradio = ["gradio==3.34.0", "pydantic==1.10.13"]
pettingzoo = ["pettingzoo>=1.24.0", "chess==1.9.4", "rlcard==1.0.5", "pygame==2.3.0", "gymnasium>=0.28.1"]
umshini = ["pettingzoo>=1.24.1", "chess==1.9.4", "rlcard==1.0.5", "pygame==2.3.0", "gymnasium>=0.28.1", "langchain>=0.0.135", "colorama>=0.4.6"]
all_backends = ["anthropic>=0.2.8", "cohere>=4.3.1", "transformers>=4.27.4", "bardapi==0.1.11", "langchain>=0.0.135"]
all_envs = ["pettingzoo>=1.24.0", "chess==1.9.4", "rlcard==1.0.5", "pygame==2.3.0", "langchain>=0.0.135"]
database = ["supabase==2.0.3"]
testing = ["deptry>=0.12.0", "pytest>=7.4.3", "pytest-cov>=4.1.0", "pytest-xdist>=3.4.0"]
all = ["anthropic>=0.2.8", "cohere>=4.3.1", "transformers>=4.27.4", "gradio==3.34.0", "pydantic==1.10.13", "pettingzoo>=1.24.0", "chess==1.9.4", "rlcard==1.0.5", "pygame==2.3.0", "gymnasium>=0.28.1",
       "colorama>=0.4.6", "supabase==2.0.3", "bardapi==0.1.11", "langchain>=0.0.339", "deptry>=0.12.0", "pytest>=7.4.3", "pytest-cov>=4.1.0", "pytest-xdist>=3.4.0"]

[tool.deptry.per_rule_ignores]
DEP002 = [ "pytest", "pytest-cov", "deptry", "pytest-xdist", "chess", "rlcard", "pygame", "pydantic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [ "--ignore=tests/unit/test_umshini_environments.py", ]
